@@ -195,10 +195,10 @@
 
     <include name="Defs_Hidden_Button">
         <visible allowhiddenfocus="true">false</visible>
-        <left>-2000</left>
-        <top>-2000</top>
         <width>1</width>
         <height>1</height>
+        <texturefocus />
+        <texturenofocus />
     </include>
 
     <!-- Keyboard and Numeric Keys -->
