@@ -2,6 +2,7 @@
 Fix resolution flags not showing
 Fix some alignment issues in dialogvideoinfo
 Rearrange widget groups for Default Widgets to get people using library over skin helper
+Add image gallery in videoinfo for extrafanart
 
 [B]0.9.6[/B]
 Many optimisations of skin code
